make ressponsive code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="general">
-    <h1>Featured Resources</h1>
+    <h1 class="general__title">Featured Resources</h1>
     <div class="container--flex">
       <a href="">
         <div class="card card--margin">
